--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
     "dependencies": {
         "async-lock": "^1.4.1",
         "dotenv": "^16.4.5",
+        "minimist": "^1.2.8",
         "mysql": "^2.18.1",
+        "node-binance-api": "^0.13.1",
         "node-telegram-bot-api": "^0.65.1",
         "pm2": "^5.3.1",
         "protobufjs": "^7.3.2",
         "uuid": "^9.0.1",
-        "zeromq": "^5.3.1"
+        "zeromq": "^6.0.0-beta.20"
     }
 }
