--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "dotenv": "^16.4.5",
         "minimist": "^1.2.8",
         "mysql": "^2.18.1",
-        "node-binance-api": "^0.13.1",
+        "node-binance-api": "file:node-binance-api",
         "node-telegram-bot-api": "^0.65.1",
         "pm2": "^5.3.1",
         "protobufjs": "^7.3.2",
